gccida/c3/branch_prob
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/branch_prob/src/profile.c:1215:4: error: expected ';' after expression
rtx reg_note; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/branch_prob/src/profile.c:1215:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // r13 
    ^
    enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/branch_prob/src/profile.c:1226:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v224; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/branch_prob/src/profile.c:1231:4: error: expected ';' after expression
rtx v229; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/branch_prob/src/profile.c:1231:5: error: use of undeclared identifier 'v229'
rtx v229; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/branch_prob/src/profile.c:1268:15: error: expected expression
head = ( rtx *)v1->head; 
              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/branch_prob/src/profile.c:1278:27: error: expected ')'
if ( find_reg_note( ( rtx)head, REG_SETJMP, 0LL) ) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/branch_prob/src/profile.c:1278:19: note: to match this '('
if ( find_reg_note( ( rtx)head, REG_SETJMP, 0LL) ) 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/branch_prob/src/profile.c:1280:50: error: expected expression
if ( *( _WORD *)v1->head != 36 && head == ( rtx *)v1->head[1].fld[0].rtwint ) 
                                                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/branch_prob/src/profile.c:1289:15: error: expected expression
head = ( rtx *)head[3]; 
              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/branch_prob/src/profile.c:1290:21: error: expected expression
if ( head == ( rtx *)end[1].fld[0].rtwint ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/branch_prob/src/profile.c:1296:52: error: expected ')'
if ( *( _WORD *)head == 34 && find_reg_note( ( rtx)head, REG_SETJMP, 0LL) ) 
                                                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/branch_prob/src/profile.c:1296:44: note: to match this '('
if ( *( _WORD *)head == 34 && find_reg_note( ( rtx)head, REG_SETJMP, 0LL) ) 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/branch_prob/src/profile.c:1298:50: error: expected expression
if ( *( _WORD *)v1->head == 36 || head != ( rtx *)v1->head[1].fld[0].rtwint ) 
                                                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/branch_prob/src/profile.c:1302:15: error: expected expression
head = ( rtx *)head[3]; 
              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/branch_prob/src/profile.c:1304:24: error: expected expression
while ( head != ( rtx *)v1->end[1].fld[0].rtwint ); 
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/branch_prob/src/profile.c:1304:25: error: expected ')'
while ( head != ( rtx *)v1->end[1].fld[0].rtwint ); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/branch_prob/src/profile.c:1304:7: note: to match this '('
while ( head != ( rtx *)v1->end[1].fld[0].rtwint ); 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/branch_prob/src/profile.c:1365:19: error: expected identifier or '('
 struct edge_list = create_edge_list( ); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/branch_prob/src/profile.c:1397:43: error: expected expression
nonnote_insn = prev_nonnote_insn( *( rtx *)v22); 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/branch_prob/src/profile.c:1402:4: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
ptr.m128i_i32[0] = 0; 
~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/branch_prob/src/profile.c:1412:1: error: use of undeclared identifier 'branch_prob_ignore_next_note'
branch_prob_ignore_next_note = 1; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/branch_prob/src/obj/profile.o] Error 1
